# gen_ai_notes

./: a.py  algs.py  c.py  challenged.md  interpreter.path  notes.md  nyfang.json  tool_calling_instructor.ipynb
instructor_scripts/: pyproject.toml
old/: agent.drawio  b.py
prompts/: date_analyser_sys_prompt.template  methodology_read_sys_prompt.txt
