[tool.poetry]
name = "generative-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
# duckduckgo-search = "^5.0"
# huggingface-hub = "^0.21.4"
langchain-google-genai = "^2.0.4"
# crewai = "0.22"
# torch = "^2.2.2"
# transformers = "^4.39.2"
# sentencepiece = "^0.2.0"
# accelerate = "^0.28.0"
# safetensors = "^0.4.2"
# ollama = "^0.1.8"
instructor = "^1.6.3"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
